[package]
name = "webrender_traits"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "webrender_traits"
path = "lib.rs"

[dependencies]
euclid = "0.20"
surfman = "0.2"
servo_geometry = {path = "../geometry"}
webrender_api = {git = "https://github.com/servo/webrender"}

